Update documentation to reflect current project state
- Update README.md: 22/22 TPC-H DataFrame parity, compatibility modes
  (strict/relaxed), build-extension profile, corrected test counts
- Rewrite docs/README.md to remove broken links to non-existent files
- Update SUPPORTED_OPERATIONS.md: mark PIVOT/UNPIVOT/ROLLUP/CUBE implemented
- Update DIFFERENTIAL_TESTING_ARCHITECTURE.md: current test coverage table
- Update SPARK_COMPAT_EXTENSION.md: add spark_sum/spark_avg functions
- Update GAP_ANALYSIS, PLATFORM_SUPPORT, TPC_H_BENCHMARK with current info
- Add JAVA21_REFACTORING_PROPOSAL.md: sealed types + pattern matching plan
- Add CLAUDE_CODE_EFFICIENCY_REVIEW.md: session analysis and recommendations
- Add fresh CURRENT_FOCUS reports for relaxed (51/51) and strict (26/51) modes
- Remove stale CURRENT_FOCUS documents from prior milestones

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>